tests/design/errors/views/require.js



function map(doc){
    var lib = require('lib/false');
    lib.map(doc);
}


module.exports = {map}